--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mycep",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Busca o endereço de um CEP",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,9 @@
     "cep",
     "node"
   ],
+  "engines": {
+    "node": ">= 6.0.0"
+  },
   "author": "wallace silva <wsilva@gmail.com>",
   "license": "MIT",
   "bugs": {
